# BITS-MLOPS-ASSGN1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  docker-compose.yml  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements-ci.txt  requirements.txt  spam_mlflow.sh
.dvc/: config
.github/workflows/: ci.yml
api/: main.py
data/processed/: test.parquet  train.parquet
data/raw/: california_housing.csv.dvc
docker/: Dockerfile
docker/mlflow/: Dockerfile
docker/supervisor/: stack.conf
docs/: api_spec.json  architecture.md
monitoring/: predictions.db  prometheus.yml  setup_db.py
monitoring/grafana/provisioning/dashboards/: api_dashboard.json
monitoring/grafana/provisioning/datasources/: datasource.yml
src/data/: 01_download_data.ipynb  02_eda.ipynb  download_data.ipynb  preprocess_03.py
src/models/: promote_model.py  register_best_model.py  start_mlflow_ui.sh  test_mlflow_clean.py  train_baseline.py  train_multiple_models.py
src/pipelines/: preprocess_runner.py
src/retraining/: drift.py  retrain_pipeline.py
src/utils/: schema.py
tests/: test_api.py  test_schema.py
